Agregadas las clases de NotifyBase y Client

--- a/WPFHelloWorld/WPFHelloWorld.csproj
+++ b/WPFHelloWorld/WPFHelloWorld.csproj
@@ -69,6 +69,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\NotifyBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
